api is done && client is done

--- a/source/accounts/templates/registration/login.html
+++ b/source/accounts/templates/registration/login.html
@@ -33,10 +33,25 @@
         <btn class='btn' type="submit" id="add" onclick="addQuote(event);">Add a Quote</btn>
     </div>
 </div>
-<div class="content">
-     <h1>The Quotes Page</h1>
-    <div class="container" id="container">
-    </div>
+    <div class="task-form">
+    <h1>LOGIN PAGE</h1>
+    <form action="" method="post" class="text-center">
+        {% csrf_token %}
+        {% if has_error %}
+            <p class="form-error">Incorrect login or password.</p>
+        {% endif %}
+        <div class="form-group">
+            <label for="username" class="form-label">Login:</label>
+            <input type="text" name="username" id="username">
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" name="password" id="password">
+        </div>
+        <br>
+        <button type="submit">Sign In</button>
+    </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
