--- a/source/accounts/templates/user_create.html
+++ b/source/accounts/templates/user_create.html
@@ -33,14 +33,17 @@
         <btn class='btn' type="submit" id="add" onclick="addQuote(event);">Add a Quote</btn>
     </div>
 </div>
-<div class="content">
-     <h1>The Quotes Page</h1>
-    <div class="container" id="container">
+    <h1>Sign Up</h1>
+    <div class="task-form">
+        <form action="" method="POST">
+            {% include 'partial/form.html' with form_method='post' button_text="Sign Up" %}
+        </form>
     </div>
-</div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 <script src="{% static 'js/index.js' %}" ></script>
 </body>
 </html>
+
+
